// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActivityFeedCard when a New OMIS order is added should render an activity card 1`] = `
<div
  className="sc-bdVaJa bitMfj"
>
  <div
    className="sc-cLQEGU kmbhXR"
  >
    <div
      className="sc-hORach hWIXLH"
    >
      <h3
        className="sc-gqPbQI gmjEqk sc-jAaTju jwklkP"
        size="MEDIUM"
      >
        New Order (OMIS) added
      </h3>
      <h3
        className="sc-bMVAic dEbRoq sc-jAaTju jwklkP"
        size="MEDIUM"
      >
        <a
          className="sc-htpNat jdOrDl"
          href="https://www.datahub.dev.uktrade.io/omis/504b7a34-c083-4e7a-998b-61cbe7b6b269"
          muted={false}
        >
          EYX193/17
        </a>
      </h3>
    </div>
    <div
      className="sc-bAeIUo fiPrMl"
    >
      20 Jul 2017
    </div>
  </div>
  <details
    className="sc-hMFtBS gUaJXr sc-kkGfuU bEQKnh"
    open={false}
  >
    <summary
      className="sc-iAyFgw dcdfbw"
    >
      <span
        className="sc-hSdWYo ctAAoI"
      >
        View key details and people for this order
      </span>
    </summary>
    <div
      className="sc-eHgmQL jEgifR"
    >
      <table
        className="sc-exAgwC bVpclo sc-hrWEMg duUoFv"
      >
        <tbody
          className="sc-ibxdXY clQDsv"
        >
          <tr
            className="sc-bwCtUz kLbHbK"
          >
            <th
              className="sc-iQKALj hLpCNL"
              style={
                Object {
                  "border": 0,
                  "fontWeight": "normal",
                }
              }
            >
              Country
            </th>
            <td
              className="sc-iQKALj ldWFKA"
              style={
                Object {
                  "border": 0,
                }
              }
            >
              Bahamas
            </td>
          </tr>
          <tr
            className="sc-bwCtUz kLbHbK"
          >
            <th
              className="sc-iQKALj hLpCNL"
              style={
                Object {
                  "border": 0,
                  "fontWeight": "normal",
                }
              }
            >
              UK region
            </th>
            <td
              className="sc-iQKALj ldWFKA"
              style={
                Object {
                  "border": 0,
                }
              }
            >
              South East
            </td>
          </tr>
          <tr
            className="sc-bwCtUz kLbHbK"
          >
            <th
              className="sc-iQKALj hLpCNL"
              style={
                Object {
                  "border": 0,
                  "fontWeight": "normal",
                }
              }
            >
              Added by
            </th>
            <td
              className="sc-iQKALj ldWFKA"
              style={
                Object {
                  "border": 0,
                }
              }
            >
              <ul
                className="sc-gojNiO qHzYu"
              >
                <li
                  className="sc-cQFLBn erMDhO"
                >
                  <span>
                    Test CMU 1
                  </span>
                  , 
                  <a
                    className="sc-htpNat jdOrDl"
                    href="mailto:cmuuser1test@mobile.ukti.gov.uk"
                    muted={false}
                  >
                     
                    cmuuser1test@mobile.ukti.gov.uk
                  </a>
                </li>
              </ul>
            </td>
          </tr>
          <tr
            className="sc-bwCtUz kLbHbK"
          >
            <th
              className="sc-iQKALj hLpCNL"
              style={
                Object {
                  "border": 0,
                  "fontWeight": "normal",
                }
              }
            >
              Company contact(s)
            </th>
            <td
              className="sc-iQKALj ldWFKA"
              style={
                Object {
                  "border": 0,
                }
              }
            >
              <ul
                className="sc-gojNiO qHzYu"
              >
                <li
                  className="sc-cQFLBn erMDhO"
                >
                  <a
                    className="sc-htpNat jdOrDl"
                    href="https://www.datahub.dev.uktrade.io/contacts/ec1be329-ae82-47a9-9d65-c289f91c39ed/details"
                    muted={false}
                  >
                    Alysia Tolley
                  </a>
                   
                  <span>
                    (
                    Some job title
                    )
                  </span>
                </li>
              </ul>
            </td>
          </tr>
        </tbody>
      </table>
      <a
        className="sc-htpNat jdOrDl"
        href="https://www.datahub.dev.uktrade.io/omis/504b7a34-c083-4e7a-998b-61cbe7b6b269"
        muted={false}
      >
        Go to the order detail page
      </a>
    </div>
  </details>
</div>
`;

exports[`ActivityFeedCard when an investment project is CTI should render the CTI investment project activity card 1`] = `
<div
  className="sc-bdVaJa bitMfj"
>
  <div
    className="sc-cLQEGU kmbhXR"
  >
    <div
      className="sc-hORach hWIXLH"
    >
      <h3
        className="sc-gqPbQI gmjEqk sc-jAaTju jwklkP"
        size="MEDIUM"
      >
        New investment project added - Commitment to invest
      </h3>
      <h3
        className="sc-bMVAic dEbRoq sc-jAaTju jwklkP"
        size="MEDIUM"
      >
        <a
          className="sc-htpNat jdOrDl"
          href="https://www.datahub.dev.uktrade.io/investments/projects/8f2662e9-0691-435f-8edd-7fb9df9d8936"
          muted={false}
        >
          Aphrodite Mcdonald
        </a>
      </h3>
    </div>
    <div
      className="sc-bAeIUo fiPrMl"
    >
      23 May 2017
    </div>
  </div>
  <details
    className="sc-hMFtBS gUaJXr sc-kkGfuU bEQKnh"
    open={false}
  >
    <summary
      className="sc-iAyFgw dcdfbw"
    >
      <span
        className="sc-hSdWYo ctAAoI"
      >
        Key details and people for this project
      </span>
    </summary>
    <div
      className="sc-eHgmQL jEgifR"
    >
      <table
        className="sc-exAgwC bVpclo sc-hrWEMg duUoFv"
      >
        <tbody
          className="sc-ibxdXY clQDsv"
        >
          <tr
            className="sc-bwCtUz kLbHbK"
          >
            <th
              className="sc-iQKALj hLpCNL"
              style={
                Object {
                  "border": 0,
                  "fontWeight": "normal",
                }
              }
            >
              Investment Type
            </th>
            <td
              className="sc-iQKALj ldWFKA"
              style={
                Object {
                  "border": 0,
                }
              }
            >
              Commitment to invest
            </td>
          </tr>
          <tr
            className="sc-bwCtUz kLbHbK"
          >
            <th
              className="sc-iQKALj hLpCNL"
              style={
                Object {
                  "border": 0,
                  "fontWeight": "normal",
                }
              }
            >
              Estimated land date
            </th>
            <td
              className="sc-iQKALj ldWFKA"
              style={
                Object {
                  "border": 0,
                }
              }
            >
              01 Oct 1973
            </td>
          </tr>
          <tr
            className="sc-bwCtUz kLbHbK"
          >
            <th
              className="sc-iQKALj hLpCNL"
              style={
                Object {
                  "border": 0,
                  "fontWeight": "normal",
                }
              }
            >
              Company contact(s)
            </th>
            <td
              className="sc-iQKALj ldWFKA"
              style={
                Object {
                  "border": 0,
                }
              }
            >
              <ul
                className="sc-gojNiO qHzYu"
              >
                <li
                  className="sc-cQFLBn erMDhO"
                >
                  <a
                    className="sc-htpNat jdOrDl"
                    href="https://www.datahub.dev.uktrade.io/contacts/82e24a82-0688-424d-911f-2666d3ddcf9b/details"
                    muted={false}
                  >
                    Reece Stevens
                  </a>
                   
                  <span>
                    (
                    Some job title
                    )
                  </span>
                </li>
              </ul>
            </td>
          </tr>
          <tr
            className="sc-bwCtUz kLbHbK"
          >
            <th
              className="sc-iQKALj hLpCNL"
              style={
                Object {
                  "border": 0,
                  "fontWeight": "normal",
                }
              }
            >
              DefaultItemRenderer
            </th>
            <td
              className="sc-iQKALj ldWFKA"
              style={
                Object {
                  "border": 0,
                }
              }
            >
              <ul
                className="sc-gojNiO qHzYu"
              >
                <li
                  className="sc-cQFLBn erMDhO"
                >
                  a
                </li>
                <li
                  className="sc-cQFLBn erMDhO"
                >
                  b
                </li>
                <li
                  className="sc-cQFLBn erMDhO"
                >
                  c
                </li>
              </ul>
            </td>
          </tr>
          <tr
            className="sc-bwCtUz kLbHbK"
          >
            <th
              className="sc-iQKALj hLpCNL"
              style={
                Object {
                  "border": 0,
                  "fontWeight": "normal",
                }
              }
            >
              DefaultItemRenderer
            </th>
            <td
              className="sc-iQKALj ldWFKA"
              style={
                Object {
                  "border": 0,
                }
              }
            >
              <ul
                className="sc-gojNiO qHzYu"
              >
                <li
                  className="sc-cQFLBn erMDhO"
                >
                  1
                </li>
                <li
                  className="sc-cQFLBn erMDhO"
                >
                  2
                </li>
                <li
                  className="sc-cQFLBn erMDhO"
                />
              </ul>
            </td>
          </tr>
          <tr
            className="sc-bwCtUz kLbHbK"
          >
            <th
              className="sc-iQKALj hLpCNL"
              style={
                Object {
                  "border": 0,
                  "fontWeight": "normal",
                }
              }
            >
              BooleanItemRenderer
            </th>
            <td
              className="sc-iQKALj ldWFKA"
              style={
                Object {
                  "border": 0,
                }
              }
            >
              <ul
                className="sc-gojNiO qHzYu"
              >
                <li
                  className="sc-cQFLBn erMDhO"
                >
                  true
                </li>
                <li
                  className="sc-cQFLBn erMDhO"
                >
                  false
                </li>
              </ul>
            </td>
          </tr>
        </tbody>
      </table>
      <a
        className="sc-htpNat jdOrDl"
        href="https://www.datahub.dev.uktrade.io/investments/projects/8f2662e9-0691-435f-8edd-7fb9df9d8936"
        muted={false}
      >
        Go to the investment project detail page
      </a>
    </div>
  </details>
</div>
`;

exports[`ActivityFeedCard when an investment project is FDI should render the FDI investment project activity card 1`] = `
<div
  className="sc-bdVaJa bitMfj"
>
  <div
    className="sc-cLQEGU kmbhXR"
  >
    <div
      className="sc-hORach hWIXLH"
    >
      <h3
        className="sc-gqPbQI gmjEqk sc-jAaTju jwklkP"
        size="MEDIUM"
      >
        New investment project added - FDI
      </h3>
      <h3
        className="sc-bMVAic dEbRoq sc-jAaTju jwklkP"
        size="MEDIUM"
      >
        <a
          className="sc-htpNat jdOrDl"
          href="https://www.datahub.dev.uktrade.io/investments/projects/3520b973-0e77-46cf-be75-3585f2f6691e"
          muted={false}
        >
          Wig factory
        </a>
      </h3>
    </div>
    <div
      className="sc-bAeIUo fiPrMl"
    >
      05 Mar 2017
    </div>
  </div>
  <details
    className="sc-hMFtBS gUaJXr sc-kkGfuU bEQKnh"
    open={false}
  >
    <summary
      className="sc-iAyFgw dcdfbw"
    >
      <span
        className="sc-hSdWYo ctAAoI"
      >
        Key details and people for this project
      </span>
    </summary>
    <div
      className="sc-eHgmQL jEgifR"
    >
      <table
        className="sc-exAgwC bVpclo sc-hrWEMg duUoFv"
      >
        <tbody
          className="sc-ibxdXY clQDsv"
        >
          <tr
            className="sc-bwCtUz kLbHbK"
          >
            <th
              className="sc-iQKALj hLpCNL"
              style={
                Object {
                  "border": 0,
                  "fontWeight": "normal",
                }
              }
            >
              Investment Type
            </th>
            <td
              className="sc-iQKALj ldWFKA"
              style={
                Object {
                  "border": 0,
                }
              }
            >
              FDI
            </td>
          </tr>
          <tr
            className="sc-bwCtUz kLbHbK"
          >
            <th
              className="sc-iQKALj hLpCNL"
              style={
                Object {
                  "border": 0,
                  "fontWeight": "normal",
                }
              }
            >
              Estimated land date
            </th>
            <td
              className="sc-iQKALj ldWFKA"
              style={
                Object {
                  "border": 0,
                }
              }
            >
              01 Jan 2020
            </td>
          </tr>
          <tr
            className="sc-bwCtUz kLbHbK"
          >
            <th
              className="sc-iQKALj hLpCNL"
              style={
                Object {
                  "border": 0,
                  "fontWeight": "normal",
                }
              }
            >
              Company contact(s)
            </th>
            <td
              className="sc-iQKALj ldWFKA"
              style={
                Object {
                  "border": 0,
                }
              }
            >
              <ul
                className="sc-gojNiO qHzYu"
              >
                <li
                  className="sc-cQFLBn erMDhO"
                >
                  <a
                    className="sc-htpNat jdOrDl"
                    href="https://www.datahub.dev.uktrade.io/contacts/952232d2-1d25-4c3a-bcac-2f3a30a94da9"
                    muted={false}
                  >
                    Dean Cox
                  </a>
                   
                  <span>
                    (
                    Some job title
                    )
                  </span>
                </li>
                <li
                  className="sc-cQFLBn erMDhO"
                >
                  <a
                    className="sc-htpNat jdOrDl"
                    href="https://www.datahub.dev.uktrade.io/contacts/04cadecd-2de4-4cda-9fda-59db93495dba"
                    muted={false}
                  >
                    John Doe
                  </a>
                   
                  <span>
                    (
                    Director
                    )
                  </span>
                </li>
                <li
                  className="sc-cQFLBn erMDhO"
                >
                  <a
                    className="sc-htpNat jdOrDl"
                    href="https://www.datahub.dev.uktrade.io/contacts/28f75a93-3c27-e611-9bdc-e4115bead28a/details"
                    muted={false}
                  >
                    Mary Marriott
                  </a>
                   
                  <span>
                    (
                    Chief Executive
                    )
                  </span>
                </li>
              </ul>
            </td>
          </tr>
          <tr
            className="sc-bwCtUz kLbHbK"
          >
            <th
              className="sc-iQKALj hLpCNL"
              style={
                Object {
                  "border": 0,
                  "fontWeight": "normal",
                }
              }
            >
              Total Investment
            </th>
            <td
              className="sc-iQKALj ldWFKA"
              style={
                Object {
                  "border": 0,
                }
              }
            >
              £1,000,000
            </td>
          </tr>
          <tr
            className="sc-bwCtUz kLbHbK"
          >
            <th
              className="sc-iQKALj hLpCNL"
              style={
                Object {
                  "border": 0,
                  "fontWeight": "normal",
                }
              }
            >
              Capital expenditure value
            </th>
            <td
              className="sc-iQKALj ldWFKA"
              style={
                Object {
                  "border": 0,
                }
              }
            >
              £200,000
            </td>
          </tr>
          <tr
            className="sc-bwCtUz kLbHbK"
          >
            <th
              className="sc-iQKALj hLpCNL"
              style={
                Object {
                  "border": 0,
                  "fontWeight": "normal",
                }
              }
            >
              Gross value added (GVA)
            </th>
            <td
              className="sc-iQKALj ldWFKA"
              style={
                Object {
                  "border": 0,
                }
              }
            >
              £11,620
            </td>
          </tr>
          <tr
            className="sc-bwCtUz kLbHbK"
          >
            <th
              className="sc-iQKALj hLpCNL"
              style={
                Object {
                  "border": 0,
                  "fontWeight": "normal",
                }
              }
            >
              Number of new jobs
            </th>
            <td
              className="sc-iQKALj ldWFKA"
              style={
                Object {
                  "border": 0,
                }
              }
            >
              15,400
            </td>
          </tr>
          <tr
            className="sc-bwCtUz kLbHbK"
          >
            <th
              className="sc-iQKALj hLpCNL"
              style={
                Object {
                  "border": 0,
                  "fontWeight": "normal",
                }
              }
            >
              DefaultItemRenderer
            </th>
            <td
              className="sc-iQKALj ldWFKA"
              style={
                Object {
                  "border": 0,
                }
              }
            >
              <ul
                className="sc-gojNiO qHzYu"
              >
                <li
                  className="sc-cQFLBn erMDhO"
                >
                  a
                </li>
                <li
                  className="sc-cQFLBn erMDhO"
                >
                  b
                </li>
                <li
                  className="sc-cQFLBn erMDhO"
                >
                  c
                </li>
              </ul>
            </td>
          </tr>
          <tr
            className="sc-bwCtUz kLbHbK"
          >
            <th
              className="sc-iQKALj hLpCNL"
              style={
                Object {
                  "border": 0,
                  "fontWeight": "normal",
                }
              }
            >
              DefaultItemRenderer
            </th>
            <td
              className="sc-iQKALj ldWFKA"
              style={
                Object {
                  "border": 0,
                }
              }
            >
              <ul
                className="sc-gojNiO qHzYu"
              >
                <li
                  className="sc-cQFLBn erMDhO"
                >
                  1
                </li>
                <li
                  className="sc-cQFLBn erMDhO"
                >
                  2
                </li>
                <li
                  className="sc-cQFLBn erMDhO"
                />
              </ul>
            </td>
          </tr>
          <tr
            className="sc-bwCtUz kLbHbK"
          >
            <th
              className="sc-iQKALj hLpCNL"
              style={
                Object {
                  "border": 0,
                  "fontWeight": "normal",
                }
              }
            >
              BooleanItemRenderer
            </th>
            <td
              className="sc-iQKALj ldWFKA"
              style={
                Object {
                  "border": 0,
                }
              }
            >
              <ul
                className="sc-gojNiO qHzYu"
              >
                <li
                  className="sc-cQFLBn erMDhO"
                >
                  true
                </li>
                <li
                  className="sc-cQFLBn erMDhO"
                >
                  false
                </li>
              </ul>
            </td>
          </tr>
        </tbody>
      </table>
      <a
        className="sc-htpNat jdOrDl"
        href="https://www.datahub.dev.uktrade.io/investments/projects/3520b973-0e77-46cf-be75-3585f2f6691e"
        muted={false}
      >
        Go to the investment project detail page
      </a>
    </div>
  </details>
</div>
`;

exports[`ActivityFeedCard when an investment project is Non-FDI should render the Non-FDI investment project activity card 1`] = `
<div
  className="sc-bdVaJa bitMfj"
>
  <div
    className="sc-cLQEGU kmbhXR"
  >
    <div
      className="sc-hORach hWIXLH"
    >
      <h3
        className="sc-gqPbQI gmjEqk sc-jAaTju jwklkP"
        size="MEDIUM"
      >
        New investment project added - Non-FDI
      </h3>
      <h3
        className="sc-bMVAic dEbRoq sc-jAaTju jwklkP"
        size="MEDIUM"
      >
        <a
          className="sc-htpNat jdOrDl"
          href="https://www.datahub.dev.uktrade.io/investments/projects/ff4005e5-f769-43cb-a46f-a483ec20eda7"
          muted={false}
        >
          Refined Rubber Chicken
        </a>
      </h3>
    </div>
    <div
      className="sc-bAeIUo fiPrMl"
    >
      03 Oct 2017
    </div>
  </div>
  <details
    className="sc-hMFtBS gUaJXr sc-kkGfuU bEQKnh"
    open={false}
  >
    <summary
      className="sc-iAyFgw dcdfbw"
    >
      <span
        className="sc-hSdWYo ctAAoI"
      >
        Key details and people for this project
      </span>
    </summary>
    <div
      className="sc-eHgmQL jEgifR"
    >
      <table
        className="sc-exAgwC bVpclo sc-hrWEMg duUoFv"
      >
        <tbody
          className="sc-ibxdXY clQDsv"
        >
          <tr
            className="sc-bwCtUz kLbHbK"
          >
            <th
              className="sc-iQKALj hLpCNL"
              style={
                Object {
                  "border": 0,
                  "fontWeight": "normal",
                }
              }
            >
              Investment Type
            </th>
            <td
              className="sc-iQKALj ldWFKA"
              style={
                Object {
                  "border": 0,
                }
              }
            >
              Non-FDI
            </td>
          </tr>
          <tr
            className="sc-bwCtUz kLbHbK"
          >
            <th
              className="sc-iQKALj hLpCNL"
              style={
                Object {
                  "border": 0,
                  "fontWeight": "normal",
                }
              }
            >
              Added by
            </th>
            <td
              className="sc-iQKALj ldWFKA"
              style={
                Object {
                  "border": 0,
                }
              }
            >
              <ul
                className="sc-gojNiO qHzYu"
              >
                <li
                  className="sc-cQFLBn erMDhO"
                >
                  <span>
                    Test CMU 1
                  </span>
                  , 
                  <a
                    className="sc-htpNat jdOrDl"
                    href="mailto:cmuuser1test@mobile.ukti.gov.uk"
                    muted={false}
                  >
                     
                    cmuuser1test@mobile.ukti.gov.uk
                  </a>
                </li>
              </ul>
            </td>
          </tr>
          <tr
            className="sc-bwCtUz kLbHbK"
          >
            <th
              className="sc-iQKALj hLpCNL"
              style={
                Object {
                  "border": 0,
                  "fontWeight": "normal",
                }
              }
            >
              Estimated land date
            </th>
            <td
              className="sc-iQKALj ldWFKA"
              style={
                Object {
                  "border": 0,
                }
              }
            >
              01 Dec 2018
            </td>
          </tr>
          <tr
            className="sc-bwCtUz kLbHbK"
          >
            <th
              className="sc-iQKALj hLpCNL"
              style={
                Object {
                  "border": 0,
                  "fontWeight": "normal",
                }
              }
            >
              Company contact(s)
            </th>
            <td
              className="sc-iQKALj ldWFKA"
              style={
                Object {
                  "border": 0,
                }
              }
            >
              <ul
                className="sc-gojNiO qHzYu"
              >
                <li
                  className="sc-cQFLBn erMDhO"
                >
                  <a
                    className="sc-htpNat jdOrDl"
                    href="https://www.datahub.dev.uktrade.io/contacts/889dc0e6-a60c-4368-822c-e6b644bfcbf7/details"
                    muted={false}
                  >
                    Ruthie Cole
                  </a>
                   
                  <span>
                    (
                    Some job title
                    )
                  </span>
                </li>
              </ul>
            </td>
          </tr>
          <tr
            className="sc-bwCtUz kLbHbK"
          >
            <th
              className="sc-iQKALj hLpCNL"
              style={
                Object {
                  "border": 0,
                  "fontWeight": "normal",
                }
              }
            >
              DefaultItemRenderer
            </th>
            <td
              className="sc-iQKALj ldWFKA"
              style={
                Object {
                  "border": 0,
                }
              }
            >
              <ul
                className="sc-gojNiO qHzYu"
              >
                <li
                  className="sc-cQFLBn erMDhO"
                >
                  a
                </li>
                <li
                  className="sc-cQFLBn erMDhO"
                >
                  b
                </li>
                <li
                  className="sc-cQFLBn erMDhO"
                >
                  c
                </li>
              </ul>
            </td>
          </tr>
          <tr
            className="sc-bwCtUz kLbHbK"
          >
            <th
              className="sc-iQKALj hLpCNL"
              style={
                Object {
                  "border": 0,
                  "fontWeight": "normal",
                }
              }
            >
              DefaultItemRenderer
            </th>
            <td
              className="sc-iQKALj ldWFKA"
              style={
                Object {
                  "border": 0,
                }
              }
            >
              <ul
                className="sc-gojNiO qHzYu"
              >
                <li
                  className="sc-cQFLBn erMDhO"
                >
                  1
                </li>
                <li
                  className="sc-cQFLBn erMDhO"
                >
                  2
                </li>
                <li
                  className="sc-cQFLBn erMDhO"
                />
              </ul>
            </td>
          </tr>
          <tr
            className="sc-bwCtUz kLbHbK"
          >
            <th
              className="sc-iQKALj hLpCNL"
              style={
                Object {
                  "border": 0,
                  "fontWeight": "normal",
                }
              }
            >
              BooleanItemRenderer
            </th>
            <td
              className="sc-iQKALj ldWFKA"
              style={
                Object {
                  "border": 0,
                }
              }
            >
              <ul
                className="sc-gojNiO qHzYu"
              >
                <li
                  className="sc-cQFLBn erMDhO"
                >
                  true
                </li>
                <li
                  className="sc-cQFLBn erMDhO"
                >
                  false
                </li>
              </ul>
            </td>
          </tr>
        </tbody>
      </table>
      <a
        className="sc-htpNat jdOrDl"
        href="https://www.datahub.dev.uktrade.io/investments/projects/ff4005e5-f769-43cb-a46f-a483ec20eda7"
        muted={false}
      >
        Go to the investment project detail page
      </a>
    </div>
  </details>
</div>
`;

exports[`ActivityFeedCard when the interaction does not have a service should render interaction activity without services 1`] = `
<div
  className="sc-bdVaJa bitMfj"
>
  <div
    className="sc-cLQEGU kmbhXR"
  >
    <div
      className="sc-hORach hWIXLH"
    >
      <h3
        className="sc-bMVAic dEbRoq sc-jAaTju jwklkP"
        size="MEDIUM"
      >
        <a
          className="sc-htpNat jdOrDl"
          href="https://example.com/companies/a4ead59f-dfc8-e511-a5e6-e4115bead28a/interactions/a066cc49-b679-4cbe-93c5-3ceba2f067ec"
          muted={false}
        >
          Invited to Technology Roundtable
        </a>
      </h3>
    </div>
    <div
      className="sc-bAeIUo fiPrMl"
    >
      06 Jun 2019
      <div
        className="sc-iujRgT bQDONv"
      >
        <span
          className="sc-GMQeP iiTtvy"
        >
          Interaction
        </span>
      </div>
    </div>
  </div>
  <details
    className="sc-hMFtBS gUaJXr sc-kkGfuU bEQKnh"
    open={false}
  >
    <summary
      className="sc-iAyFgw dcdfbw"
    >
      <span
        className="sc-hSdWYo ctAAoI"
      >
        View interaction details
      </span>
    </summary>
    <div
      className="sc-eHgmQL jEgifR"
    >
      <table
        className="sc-exAgwC bVpclo sc-hrWEMg duUoFv"
      >
        <tbody
          className="sc-ibxdXY clQDsv"
        >
          <tr
            className="sc-bwCtUz kLbHbK"
          >
            <th
              className="sc-iQKALj hLpCNL"
              style={
                Object {
                  "border": 0,
                  "fontWeight": "normal",
                }
              }
            >
              Company contact(s)
            </th>
            <td
              className="sc-iQKALj ldWFKA"
              style={
                Object {
                  "border": 0,
                }
              }
            >
              <ul
                className="sc-gojNiO qHzYu"
              />
            </td>
          </tr>
          <tr
            className="sc-bwCtUz kLbHbK"
          >
            <th
              className="sc-iQKALj hLpCNL"
              style={
                Object {
                  "border": 0,
                  "fontWeight": "normal",
                }
              }
            >
              Adviser(s)
            </th>
            <td
              className="sc-iQKALj ldWFKA"
              style={
                Object {
                  "border": 0,
                }
              }
            >
              <ul
                className="sc-gojNiO qHzYu"
              />
            </td>
          </tr>
        </tbody>
      </table>
      <a
        className="sc-htpNat jdOrDl"
        href="https://example.com/companies/a4ead59f-dfc8-e511-a5e6-e4115bead28a/interactions/a066cc49-b679-4cbe-93c5-3ceba2f067ec"
        muted={false}
      >
        Go to the interaction detail page
      </a>
    </div>
  </details>
</div>
`;

exports[`ActivityFeedCard when the interaction is a draft and archived should render interaction activity with "Cancelled interaction" badge 1`] = `
<div
  className="sc-bdVaJa bitMfj"
>
  <div
    className="sc-cLQEGU kmbhXR"
  >
    <div
      className="sc-hORach hWIXLH"
    >
      <h3
        className="sc-bMVAic dEbRoq sc-jAaTju jwklkP"
        size="MEDIUM"
      >
        <a
          className="sc-htpNat jdOrDl"
          href="https://example.com/companies/a4ead59f-dfc8-e511-a5e6-e4115bead28a/interactions/a066cc49-b679-4cbe-93c5-3ceba2f067ec"
          muted={false}
        >
          Invited to Technology Roundtable
        </a>
      </h3>
    </div>
    <div
      className="sc-bAeIUo fiPrMl"
    >
      06 Jun 2019
      <div
        className="sc-iujRgT bQDONv"
      >
        <span
          className="sc-GMQeP ilgLOB"
        >
          Cancelled interaction
        </span>
      </div>
    </div>
  </div>
  <details
    className="sc-hMFtBS gUaJXr sc-kkGfuU bEQKnh"
    open={false}
  >
    <summary
      className="sc-iAyFgw dcdfbw"
    >
      <span
        className="sc-hSdWYo ctAAoI"
      >
        View interaction details
      </span>
    </summary>
    <div
      className="sc-eHgmQL jEgifR"
    >
      <table
        className="sc-exAgwC bVpclo sc-hrWEMg duUoFv"
      >
        <tbody
          className="sc-ibxdXY clQDsv"
        >
          <tr
            className="sc-bwCtUz kLbHbK"
          >
            <th
              className="sc-iQKALj hLpCNL"
              style={
                Object {
                  "border": 0,
                  "fontWeight": "normal",
                }
              }
            >
              Company contact(s)
            </th>
            <td
              className="sc-iQKALj ldWFKA"
              style={
                Object {
                  "border": 0,
                }
              }
            >
              <ul
                className="sc-gojNiO qHzYu"
              >
                <li
                  className="sc-cQFLBn erMDhO"
                >
                  <a
                    className="sc-htpNat jdOrDl"
                    href="https://www.datahub.dev.uktrade.io/contacts/04cadecd-2de4-4cda-9fda-59db93495dba"
                    muted={false}
                  >
                    John Doe
                  </a>
                   
                </li>
                <li
                  className="sc-cQFLBn erMDhO"
                >
                  <a
                    className="sc-htpNat jdOrDl"
                    href="https://www.datahub.dev.uktrade.io/contacts/c7327882-86f2-40e9-b1bd-81daa28f1603/details"
                    muted={false}
                  >
                    John Smith
                  </a>
                   
                </li>
                <li
                  className="sc-cQFLBn erMDhO"
                >
                  <a
                    className="sc-htpNat jdOrDl"
                    href="https://www.datahub.dev.uktrade.io/contacts/8733fec0-531b-e611-9bdc-e4115bead28a/details"
                    muted={false}
                  >
                    Lucy Bryant
                  </a>
                   
                  <span>
                    (
                    Director
                    )
                  </span>
                </li>
              </ul>
            </td>
          </tr>
          <tr
            className="sc-bwCtUz kLbHbK"
          >
            <th
              className="sc-iQKALj hLpCNL"
              style={
                Object {
                  "border": 0,
                  "fontWeight": "normal",
                }
              }
            >
              Adviser(s)
            </th>
            <td
              className="sc-iQKALj ldWFKA"
              style={
                Object {
                  "border": 0,
                }
              }
            >
              <ul
                className="sc-gojNiO qHzYu"
              >
                <li
                  className="sc-cQFLBn erMDhO"
                >
                  <span>
                    Mario Bros
                  </span>
                  , 
                  <a
                    className="sc-htpNat jdOrDl"
                    href="mailto:mariobros@dit.com"
                    muted={false}
                  >
                     
                    mariobros@dit.com
                  </a>
                  , (Digital Data Hub - Live Service)
                </li>
                <li
                  className="sc-cQFLBn erMDhO"
                >
                  <span>
                    John Hammond
                  </span>
                  , 
                  <a
                    className="sc-htpNat jdOrDl"
                    href="mailto:john.hammond@dit.com"
                    muted={false}
                  >
                     
                    john.hammond@dit.com
                  </a>
                  , (Digital Data Hub - Live Service)
                </li>
                <li
                  className="sc-cQFLBn erMDhO"
                >
                  <span>
                    Luke Moon
                  </span>
                  , 
                  <a
                    className="sc-htpNat jdOrDl"
                    href="mailto:luke.moon@dit.com"
                    muted={false}
                  >
                     
                    luke.moon@dit.com
                  </a>
                  , (Digital Data Hub - Live Service)
                </li>
              </ul>
            </td>
          </tr>
          <tr
            className="sc-bwCtUz kLbHbK"
          >
            <th
              className="sc-iQKALj hLpCNL"
              style={
                Object {
                  "border": 0,
                  "fontWeight": "normal",
                }
              }
            >
              Services
            </th>
            <td
              className="sc-iQKALj ldWFKA"
              style={
                Object {
                  "border": 0,
                }
              }
            >
              Account Management
            </td>
          </tr>
        </tbody>
      </table>
      <a
        className="sc-htpNat jdOrDl"
        href="https://example.com/companies/a4ead59f-dfc8-e511-a5e6-e4115bead28a/interactions/a066cc49-b679-4cbe-93c5-3ceba2f067ec"
        muted={false}
      >
        Go to the interaction detail page
      </a>
    </div>
  </details>
</div>
`;

exports[`ActivityFeedCard when the interaction is a draft and upcoming should render interaction activity with "Upcoming interaction" badge 1`] = `
<div
  className="sc-bdVaJa cIbqez"
>
  <div
    className="sc-cLQEGU kmbhXR"
  >
    <div
      className="sc-hORach hWIXLH"
    >
      <h3
        className="sc-bMVAic dEbRoq sc-jAaTju jwklkP"
        size="MEDIUM"
      >
        <a
          className="sc-htpNat jdOrDl"
          href="https://example.com/companies/a4ead59f-dfc8-e511-a5e6-e4115bead28a/interactions/a066cc49-b679-4cbe-93c5-3ceba2f067ec"
          muted={false}
        >
          Invited to Technology Roundtable
        </a>
      </h3>
    </div>
    <div
      className="sc-bAeIUo fiPrMl"
    >
      06 Jun 2019
      <div
        className="sc-iujRgT bQDONv"
      >
        <span
          className="sc-GMQeP jjxxKP"
        >
          Upcoming interaction
        </span>
      </div>
    </div>
  </div>
  <details
    className="sc-hMFtBS gUaJXr sc-kkGfuU bEQKnh"
    open={false}
  >
    <summary
      className="sc-iAyFgw dcdfbw"
    >
      <span
        className="sc-hSdWYo ctAAoI"
      >
        View interaction details
      </span>
    </summary>
    <div
      className="sc-eHgmQL jEgifR"
    >
      <table
        className="sc-exAgwC bVpclo sc-hrWEMg duUoFv"
      >
        <tbody
          className="sc-ibxdXY clQDsv"
        >
          <tr
            className="sc-bwCtUz kLbHbK"
          >
            <th
              className="sc-iQKALj hLpCNL"
              style={
                Object {
                  "border": 0,
                  "fontWeight": "normal",
                }
              }
            >
              Company contact(s)
            </th>
            <td
              className="sc-iQKALj ldWFKA"
              style={
                Object {
                  "border": 0,
                }
              }
            >
              <ul
                className="sc-gojNiO qHzYu"
              >
                <li
                  className="sc-cQFLBn erMDhO"
                >
                  <a
                    className="sc-htpNat jdOrDl"
                    href="https://www.datahub.dev.uktrade.io/contacts/04cadecd-2de4-4cda-9fda-59db93495dba"
                    muted={false}
                  >
                    John Doe
                  </a>
                   
                </li>
                <li
                  className="sc-cQFLBn erMDhO"
                >
                  <a
                    className="sc-htpNat jdOrDl"
                    href="https://www.datahub.dev.uktrade.io/contacts/c7327882-86f2-40e9-b1bd-81daa28f1603/details"
                    muted={false}
                  >
                    John Smith
                  </a>
                   
                </li>
                <li
                  className="sc-cQFLBn erMDhO"
                >
                  <a
                    className="sc-htpNat jdOrDl"
                    href="https://www.datahub.dev.uktrade.io/contacts/8733fec0-531b-e611-9bdc-e4115bead28a/details"
                    muted={false}
                  >
                    Lucy Bryant
                  </a>
                   
                  <span>
                    (
                    Director
                    )
                  </span>
                </li>
              </ul>
            </td>
          </tr>
          <tr
            className="sc-bwCtUz kLbHbK"
          >
            <th
              className="sc-iQKALj hLpCNL"
              style={
                Object {
                  "border": 0,
                  "fontWeight": "normal",
                }
              }
            >
              Adviser(s)
            </th>
            <td
              className="sc-iQKALj ldWFKA"
              style={
                Object {
                  "border": 0,
                }
              }
            >
              <ul
                className="sc-gojNiO qHzYu"
              >
                <li
                  className="sc-cQFLBn erMDhO"
                >
                  <span>
                    Mario Bros
                  </span>
                  , 
                  <a
                    className="sc-htpNat jdOrDl"
                    href="mailto:mariobros@dit.com"
                    muted={false}
                  >
                     
                    mariobros@dit.com
                  </a>
                  , (Digital Data Hub - Live Service)
                </li>
                <li
                  className="sc-cQFLBn erMDhO"
                >
                  <span>
                    John Hammond
                  </span>
                  , 
                  <a
                    className="sc-htpNat jdOrDl"
                    href="mailto:john.hammond@dit.com"
                    muted={false}
                  >
                     
                    john.hammond@dit.com
                  </a>
                  , (Digital Data Hub - Live Service)
                </li>
                <li
                  className="sc-cQFLBn erMDhO"
                >
                  <span>
                    Luke Moon
                  </span>
                  , 
                  <a
                    className="sc-htpNat jdOrDl"
                    href="mailto:luke.moon@dit.com"
                    muted={false}
                  >
                     
                    luke.moon@dit.com
                  </a>
                  , (Digital Data Hub - Live Service)
                </li>
              </ul>
            </td>
          </tr>
          <tr
            className="sc-bwCtUz kLbHbK"
          >
            <th
              className="sc-iQKALj hLpCNL"
              style={
                Object {
                  "border": 0,
                  "fontWeight": "normal",
                }
              }
            >
              Services
            </th>
            <td
              className="sc-iQKALj ldWFKA"
              style={
                Object {
                  "border": 0,
                }
              }
            >
              Account Management
            </td>
          </tr>
        </tbody>
      </table>
      <a
        className="sc-htpNat jdOrDl"
        href="https://example.com/companies/a4ead59f-dfc8-e511-a5e6-e4115bead28a/interactions/a066cc49-b679-4cbe-93c5-3ceba2f067ec"
        muted={false}
      >
        Go to the interaction detail page
      </a>
    </div>
  </details>
</div>
`;

exports[`ActivityFeedCard when the interaction is a draft in the past should render interaction activity with "Incomplete interaction" badge 1`] = `
<div
  className="sc-bdVaJa bitMfj"
>
  <div
    className="sc-cLQEGU kmbhXR"
  >
    <div
      className="sc-hORach hWIXLH"
    >
      <h3
        className="sc-bMVAic dEbRoq sc-jAaTju jwklkP"
        size="MEDIUM"
      >
        <a
          className="sc-htpNat jdOrDl"
          href="https://example.com/companies/a4ead59f-dfc8-e511-a5e6-e4115bead28a/interactions/a066cc49-b679-4cbe-93c5-3ceba2f067ec"
          muted={false}
        >
          Invited to Technology Roundtable
        </a>
      </h3>
    </div>
    <div
      className="sc-bAeIUo fiPrMl"
    >
      05 Jun 2018
      <div
        className="sc-iujRgT bQDONv"
      >
        <span
          className="sc-GMQeP jjxxKP"
        >
          Incomplete interaction
        </span>
      </div>
    </div>
  </div>
  <details
    className="sc-hMFtBS gUaJXr sc-kkGfuU bEQKnh"
    open={false}
  >
    <summary
      className="sc-iAyFgw dcdfbw"
    >
      <span
        className="sc-hSdWYo ctAAoI"
      >
        View interaction details
      </span>
    </summary>
    <div
      className="sc-eHgmQL jEgifR"
    >
      <table
        className="sc-exAgwC bVpclo sc-hrWEMg duUoFv"
      >
        <tbody
          className="sc-ibxdXY clQDsv"
        >
          <tr
            className="sc-bwCtUz kLbHbK"
          >
            <th
              className="sc-iQKALj hLpCNL"
              style={
                Object {
                  "border": 0,
                  "fontWeight": "normal",
                }
              }
            >
              Company contact(s)
            </th>
            <td
              className="sc-iQKALj ldWFKA"
              style={
                Object {
                  "border": 0,
                }
              }
            >
              <ul
                className="sc-gojNiO qHzYu"
              >
                <li
                  className="sc-cQFLBn erMDhO"
                >
                  <a
                    className="sc-htpNat jdOrDl"
                    href="https://www.datahub.dev.uktrade.io/contacts/04cadecd-2de4-4cda-9fda-59db93495dba"
                    muted={false}
                  >
                    John Doe
                  </a>
                   
                </li>
                <li
                  className="sc-cQFLBn erMDhO"
                >
                  <a
                    className="sc-htpNat jdOrDl"
                    href="https://www.datahub.dev.uktrade.io/contacts/c7327882-86f2-40e9-b1bd-81daa28f1603/details"
                    muted={false}
                  >
                    John Smith
                  </a>
                   
                </li>
                <li
                  className="sc-cQFLBn erMDhO"
                >
                  <a
                    className="sc-htpNat jdOrDl"
                    href="https://www.datahub.dev.uktrade.io/contacts/8733fec0-531b-e611-9bdc-e4115bead28a/details"
                    muted={false}
                  >
                    Lucy Bryant
                  </a>
                   
                  <span>
                    (
                    Director
                    )
                  </span>
                </li>
              </ul>
            </td>
          </tr>
          <tr
            className="sc-bwCtUz kLbHbK"
          >
            <th
              className="sc-iQKALj hLpCNL"
              style={
                Object {
                  "border": 0,
                  "fontWeight": "normal",
                }
              }
            >
              Adviser(s)
            </th>
            <td
              className="sc-iQKALj ldWFKA"
              style={
                Object {
                  "border": 0,
                }
              }
            >
              <ul
                className="sc-gojNiO qHzYu"
              >
                <li
                  className="sc-cQFLBn erMDhO"
                >
                  <span>
                    Mario Bros
                  </span>
                  , 
                  <a
                    className="sc-htpNat jdOrDl"
                    href="mailto:mariobros@dit.com"
                    muted={false}
                  >
                     
                    mariobros@dit.com
                  </a>
                  , (Digital Data Hub - Live Service)
                </li>
                <li
                  className="sc-cQFLBn erMDhO"
                >
                  <span>
                    John Hammond
                  </span>
                  , 
                  <a
                    className="sc-htpNat jdOrDl"
                    href="mailto:john.hammond@dit.com"
                    muted={false}
                  >
                     
                    john.hammond@dit.com
                  </a>
                  , (Digital Data Hub - Live Service)
                </li>
                <li
                  className="sc-cQFLBn erMDhO"
                >
                  <span>
                    Luke Moon
                  </span>
                  , 
                  <a
                    className="sc-htpNat jdOrDl"
                    href="mailto:luke.moon@dit.com"
                    muted={false}
                  >
                     
                    luke.moon@dit.com
                  </a>
                  , (Digital Data Hub - Live Service)
                </li>
              </ul>
            </td>
          </tr>
          <tr
            className="sc-bwCtUz kLbHbK"
          >
            <th
              className="sc-iQKALj hLpCNL"
              style={
                Object {
                  "border": 0,
                  "fontWeight": "normal",
                }
              }
            >
              Services
            </th>
            <td
              className="sc-iQKALj ldWFKA"
              style={
                Object {
                  "border": 0,
                }
              }
            >
              Account Management
            </td>
          </tr>
        </tbody>
      </table>
      <a
        className="sc-htpNat jdOrDl"
        href="https://example.com/companies/a4ead59f-dfc8-e511-a5e6-e4115bead28a/interactions/a066cc49-b679-4cbe-93c5-3ceba2f067ec"
        muted={false}
      >
        Go to the interaction detail page
      </a>
    </div>
  </details>
</div>
`;

exports[`ActivityFeedCard when the interaction is complete should render interaction activity with "Completed interaction" badge 1`] = `
<div
  className="sc-bdVaJa bitMfj"
>
  <div
    className="sc-cLQEGU kmbhXR"
  >
    <div
      className="sc-hORach hWIXLH"
    >
      <h3
        className="sc-bMVAic dEbRoq sc-jAaTju jwklkP"
        size="MEDIUM"
      >
        <a
          className="sc-htpNat jdOrDl"
          href="https://example.com/companies/a4ead59f-dfc8-e511-a5e6-e4115bead28a/interactions/a066cc49-b679-4cbe-93c5-3ceba2f067ec"
          muted={false}
        >
          Invited to Technology Roundtable
        </a>
      </h3>
    </div>
    <div
      className="sc-bAeIUo fiPrMl"
    >
      06 Jun 2019
      <div
        className="sc-iujRgT bQDONv"
      >
        <span
          className="sc-GMQeP iiTtvy"
        >
          Interaction
        </span>
      </div>
    </div>
  </div>
  <details
    className="sc-hMFtBS gUaJXr sc-kkGfuU bEQKnh"
    open={false}
  >
    <summary
      className="sc-iAyFgw dcdfbw"
    >
      <span
        className="sc-hSdWYo ctAAoI"
      >
        View interaction details
      </span>
    </summary>
    <div
      className="sc-eHgmQL jEgifR"
    >
      <table
        className="sc-exAgwC bVpclo sc-hrWEMg duUoFv"
      >
        <tbody
          className="sc-ibxdXY clQDsv"
        >
          <tr
            className="sc-bwCtUz kLbHbK"
          >
            <th
              className="sc-iQKALj hLpCNL"
              style={
                Object {
                  "border": 0,
                  "fontWeight": "normal",
                }
              }
            >
              Company contact(s)
            </th>
            <td
              className="sc-iQKALj ldWFKA"
              style={
                Object {
                  "border": 0,
                }
              }
            >
              <ul
                className="sc-gojNiO qHzYu"
              >
                <li
                  className="sc-cQFLBn erMDhO"
                >
                  <a
                    className="sc-htpNat jdOrDl"
                    href="https://www.datahub.dev.uktrade.io/contacts/04cadecd-2de4-4cda-9fda-59db93495dba"
                    muted={false}
                  >
                    John Doe
                  </a>
                   
                </li>
                <li
                  className="sc-cQFLBn erMDhO"
                >
                  <a
                    className="sc-htpNat jdOrDl"
                    href="https://www.datahub.dev.uktrade.io/contacts/c7327882-86f2-40e9-b1bd-81daa28f1603/details"
                    muted={false}
                  >
                    John Smith
                  </a>
                   
                </li>
                <li
                  className="sc-cQFLBn erMDhO"
                >
                  <a
                    className="sc-htpNat jdOrDl"
                    href="https://www.datahub.dev.uktrade.io/contacts/8733fec0-531b-e611-9bdc-e4115bead28a/details"
                    muted={false}
                  >
                    Lucy Bryant
                  </a>
                   
                  <span>
                    (
                    Director
                    )
                  </span>
                </li>
              </ul>
            </td>
          </tr>
          <tr
            className="sc-bwCtUz kLbHbK"
          >
            <th
              className="sc-iQKALj hLpCNL"
              style={
                Object {
                  "border": 0,
                  "fontWeight": "normal",
                }
              }
            >
              Adviser(s)
            </th>
            <td
              className="sc-iQKALj ldWFKA"
              style={
                Object {
                  "border": 0,
                }
              }
            >
              <ul
                className="sc-gojNiO qHzYu"
              >
                <li
                  className="sc-cQFLBn erMDhO"
                >
                  <span>
                    Mario Bros
                  </span>
                  , 
                  <a
                    className="sc-htpNat jdOrDl"
                    href="mailto:mariobros@dit.com"
                    muted={false}
                  >
                     
                    mariobros@dit.com
                  </a>
                  , (Digital Data Hub - Live Service)
                </li>
                <li
                  className="sc-cQFLBn erMDhO"
                >
                  <span>
                    John Hammond
                  </span>
                  , 
                  <a
                    className="sc-htpNat jdOrDl"
                    href="mailto:john.hammond@dit.com"
                    muted={false}
                  >
                     
                    john.hammond@dit.com
                  </a>
                  , (Digital Data Hub - Live Service)
                </li>
                <li
                  className="sc-cQFLBn erMDhO"
                >
                  <span>
                    Luke Moon
                  </span>
                  , 
                  <a
                    className="sc-htpNat jdOrDl"
                    href="mailto:luke.moon@dit.com"
                    muted={false}
                  >
                     
                    luke.moon@dit.com
                  </a>
                  , (Digital Data Hub - Live Service)
                </li>
              </ul>
            </td>
          </tr>
          <tr
            className="sc-bwCtUz kLbHbK"
          >
            <th
              className="sc-iQKALj hLpCNL"
              style={
                Object {
                  "border": 0,
                  "fontWeight": "normal",
                }
              }
            >
              Services
            </th>
            <td
              className="sc-iQKALj ldWFKA"
              style={
                Object {
                  "border": 0,
                }
              }
            >
              Account Management
            </td>
          </tr>
        </tbody>
      </table>
      <a
        className="sc-htpNat jdOrDl"
        href="https://example.com/companies/a4ead59f-dfc8-e511-a5e6-e4115bead28a/interactions/a066cc49-b679-4cbe-93c5-3ceba2f067ec"
        muted={false}
      >
        Go to the interaction detail page
      </a>
    </div>
  </details>
</div>
`;

exports[`ActivityFeedCard when there is a service delivery should render service delivery activity 1`] = `
<div
  className="sc-bdVaJa bitMfj"
>
  <div
    className="sc-cLQEGU kmbhXR"
  >
    <div
      className="sc-hORach hWIXLH"
    >
      <h3
        className="sc-bMVAic dEbRoq sc-jAaTju jwklkP"
        size="MEDIUM"
      >
        <a
          className="sc-htpNat jdOrDl"
          href="https://example.com/companies/a4ead59f-dfc8-e511-a5e6-e4115bead28a/interactions/854d8d31-7405-4625-a957-0ed2c3092caa"
          muted={false}
        >
          Opening of overseas office
        </a>
      </h3>
    </div>
    <div
      className="sc-bAeIUo fiPrMl"
    >
      29 Apr 2019
      <div
        className="sc-iujRgT bQDONv"
      >
        <span
          className="sc-GMQeP iiTtvy"
        >
          Service delivery
        </span>
      </div>
    </div>
  </div>
  <details
    className="sc-hMFtBS gUaJXr sc-kkGfuU bEQKnh"
    open={false}
  >
    <summary
      className="sc-iAyFgw dcdfbw"
    >
      <span
        className="sc-hSdWYo ctAAoI"
      >
        View service delivery details
      </span>
    </summary>
    <div
      className="sc-eHgmQL jEgifR"
    >
      <table
        className="sc-exAgwC bVpclo sc-hrWEMg duUoFv"
      >
        <tbody
          className="sc-ibxdXY clQDsv"
        >
          <tr
            className="sc-bwCtUz kLbHbK"
          >
            <th
              className="sc-iQKALj hLpCNL"
              style={
                Object {
                  "border": 0,
                  "fontWeight": "normal",
                }
              }
            >
              Company contact(s)
            </th>
            <td
              className="sc-iQKALj ldWFKA"
              style={
                Object {
                  "border": 0,
                }
              }
            >
              <ul
                className="sc-gojNiO qHzYu"
              >
                <li
                  className="sc-cQFLBn erMDhO"
                >
                  <a
                    className="sc-htpNat jdOrDl"
                    href="https://www.datahub.dev.uktrade.io/contacts/04cadecd-2de4-4cda-9fda-59db93495dba"
                    muted={false}
                  >
                    John Doe
                  </a>
                   
                </li>
              </ul>
            </td>
          </tr>
          <tr
            className="sc-bwCtUz kLbHbK"
          >
            <th
              className="sc-iQKALj hLpCNL"
              style={
                Object {
                  "border": 0,
                  "fontWeight": "normal",
                }
              }
            >
              Adviser(s)
            </th>
            <td
              className="sc-iQKALj ldWFKA"
              style={
                Object {
                  "border": 0,
                }
              }
            >
              <ul
                className="sc-gojNiO qHzYu"
              >
                <li
                  className="sc-cQFLBn erMDhO"
                >
                  <span>
                    Mario Bros
                  </span>
                  , 
                  <a
                    className="sc-htpNat jdOrDl"
                    href="mailto:mariobros@dit.com"
                    muted={false}
                  >
                     
                    mariobros@dit.com
                  </a>
                  , (Digital Data Hub - Live Service)
                </li>
              </ul>
            </td>
          </tr>
          <tr
            className="sc-bwCtUz kLbHbK"
          >
            <th
              className="sc-iQKALj hLpCNL"
              style={
                Object {
                  "border": 0,
                  "fontWeight": "normal",
                }
              }
            >
              Services
            </th>
            <td
              className="sc-iQKALj ldWFKA"
              style={
                Object {
                  "border": 0,
                }
              }
            >
              Events - Overseas
            </td>
          </tr>
        </tbody>
      </table>
      <a
        className="sc-htpNat jdOrDl"
        href="https://example.com/companies/a4ead59f-dfc8-e511-a5e6-e4115bead28a/interactions/854d8d31-7405-4625-a957-0ed2c3092caa"
        muted={false}
      >
        Go to the service delivery detail page
      </a>
    </div>
  </details>
</div>
`;

exports[`ActivityFeedCard when there is an activity item of unknown type should not render an activity card 1`] = `null`;

exports[`ActivityFeedCard when there is an interaction should render interaction activity 1`] = `
<div
  className="sc-bdVaJa bitMfj"
>
  <div
    className="sc-cLQEGU kmbhXR"
  >
    <div
      className="sc-hORach hWIXLH"
    >
      <h3
        className="sc-bMVAic dEbRoq sc-jAaTju jwklkP"
        size="MEDIUM"
      >
        <a
          className="sc-htpNat jdOrDl"
          href="https://example.com/companies/a4ead59f-dfc8-e511-a5e6-e4115bead28a/interactions/a066cc49-b679-4cbe-93c5-3ceba2f067ec"
          muted={false}
        >
          Invited to Technology Roundtable
        </a>
      </h3>
    </div>
    <div
      className="sc-bAeIUo fiPrMl"
    >
      02 May 2019
      <div
        className="sc-iujRgT bQDONv"
      >
        <span
          className="sc-GMQeP iiTtvy"
        >
          Interaction
        </span>
      </div>
    </div>
  </div>
  <details
    className="sc-hMFtBS gUaJXr sc-kkGfuU bEQKnh"
    open={false}
  >
    <summary
      className="sc-iAyFgw dcdfbw"
    >
      <span
        className="sc-hSdWYo ctAAoI"
      >
        View interaction details
      </span>
    </summary>
    <div
      className="sc-eHgmQL jEgifR"
    >
      <table
        className="sc-exAgwC bVpclo sc-hrWEMg duUoFv"
      >
        <tbody
          className="sc-ibxdXY clQDsv"
        >
          <tr
            className="sc-bwCtUz kLbHbK"
          >
            <th
              className="sc-iQKALj hLpCNL"
              style={
                Object {
                  "border": 0,
                  "fontWeight": "normal",
                }
              }
            >
              Company contact(s)
            </th>
            <td
              className="sc-iQKALj ldWFKA"
              style={
                Object {
                  "border": 0,
                }
              }
            >
              <ul
                className="sc-gojNiO qHzYu"
              >
                <li
                  className="sc-cQFLBn erMDhO"
                >
                  <a
                    className="sc-htpNat jdOrDl"
                    href="https://www.datahub.dev.uktrade.io/contacts/04cadecd-2de4-4cda-9fda-59db93495dba"
                    muted={false}
                  >
                    John Doe
                  </a>
                   
                </li>
                <li
                  className="sc-cQFLBn erMDhO"
                >
                  <a
                    className="sc-htpNat jdOrDl"
                    href="https://www.datahub.dev.uktrade.io/contacts/c7327882-86f2-40e9-b1bd-81daa28f1603/details"
                    muted={false}
                  >
                    John Smith
                  </a>
                   
                </li>
                <li
                  className="sc-cQFLBn erMDhO"
                >
                  <a
                    className="sc-htpNat jdOrDl"
                    href="https://www.datahub.dev.uktrade.io/contacts/8733fec0-531b-e611-9bdc-e4115bead28a/details"
                    muted={false}
                  >
                    Lucy Bryant
                  </a>
                   
                  <span>
                    (
                    Director
                    )
                  </span>
                </li>
              </ul>
            </td>
          </tr>
          <tr
            className="sc-bwCtUz kLbHbK"
          >
            <th
              className="sc-iQKALj hLpCNL"
              style={
                Object {
                  "border": 0,
                  "fontWeight": "normal",
                }
              }
            >
              Adviser(s)
            </th>
            <td
              className="sc-iQKALj ldWFKA"
              style={
                Object {
                  "border": 0,
                }
              }
            >
              <ul
                className="sc-gojNiO qHzYu"
              >
                <li
                  className="sc-cQFLBn erMDhO"
                >
                  <span>
                    Mario Bros
                  </span>
                  , 
                  <a
                    className="sc-htpNat jdOrDl"
                    href="mailto:mariobros@dit.com"
                    muted={false}
                  >
                     
                    mariobros@dit.com
                  </a>
                  , (Digital Data Hub - Live Service)
                </li>
                <li
                  className="sc-cQFLBn erMDhO"
                >
                  <span>
                    John Hammond
                  </span>
                  , 
                  <a
                    className="sc-htpNat jdOrDl"
                    href="mailto:john.hammond@dit.com"
                    muted={false}
                  >
                     
                    john.hammond@dit.com
                  </a>
                  , (Digital Data Hub - Live Service)
                </li>
                <li
                  className="sc-cQFLBn erMDhO"
                >
                  <span>
                    Luke Moon
                  </span>
                  , 
                  <a
                    className="sc-htpNat jdOrDl"
                    href="mailto:luke.moon@dit.com"
                    muted={false}
                  >
                     
                    luke.moon@dit.com
                  </a>
                  , (Digital Data Hub - Live Service)
                </li>
              </ul>
            </td>
          </tr>
          <tr
            className="sc-bwCtUz kLbHbK"
          >
            <th
              className="sc-iQKALj hLpCNL"
              style={
                Object {
                  "border": 0,
                  "fontWeight": "normal",
                }
              }
            >
              Services
            </th>
            <td
              className="sc-iQKALj ldWFKA"
              style={
                Object {
                  "border": 0,
                }
              }
            >
              Account Management
            </td>
          </tr>
        </tbody>
      </table>
      <a
        className="sc-htpNat jdOrDl"
        href="https://example.com/companies/a4ead59f-dfc8-e511-a5e6-e4115bead28a/interactions/a066cc49-b679-4cbe-93c5-3ceba2f067ec"
        muted={false}
      >
        Go to the interaction detail page
      </a>
    </div>
  </details>
</div>
`;

exports[`ActivityFeedCard when there is an interaction without any people involved should render interaction activity without advisers nor contacts 1`] = `
<div
  className="sc-bdVaJa bitMfj"
>
  <div
    className="sc-cLQEGU kmbhXR"
  >
    <div
      className="sc-hORach hWIXLH"
    >
      <h3
        className="sc-bMVAic dEbRoq sc-jAaTju jwklkP"
        size="MEDIUM"
      >
        <a
          className="sc-htpNat jdOrDl"
          href="https://example.com/companies/a4ead59f-dfc8-e511-a5e6-e4115bead28a/interactions/a066cc49-b679-4cbe-93c5-3ceba2f067ec"
          muted={false}
        >
          Invited to Technology Roundtable
        </a>
      </h3>
    </div>
    <div
      className="sc-bAeIUo fiPrMl"
    >
      06 Jun 2019
      <div
        className="sc-iujRgT bQDONv"
      >
        <span
          className="sc-GMQeP iiTtvy"
        >
          Interaction
        </span>
      </div>
    </div>
  </div>
  <details
    className="sc-hMFtBS gUaJXr sc-kkGfuU bEQKnh"
    open={false}
  >
    <summary
      className="sc-iAyFgw dcdfbw"
    >
      <span
        className="sc-hSdWYo ctAAoI"
      >
        View interaction details
      </span>
    </summary>
    <div
      className="sc-eHgmQL jEgifR"
    >
      <table
        className="sc-exAgwC bVpclo sc-hrWEMg duUoFv"
      >
        <tbody
          className="sc-ibxdXY clQDsv"
        >
          <tr
            className="sc-bwCtUz kLbHbK"
          >
            <th
              className="sc-iQKALj hLpCNL"
              style={
                Object {
                  "border": 0,
                  "fontWeight": "normal",
                }
              }
            >
              Company contact(s)
            </th>
            <td
              className="sc-iQKALj ldWFKA"
              style={
                Object {
                  "border": 0,
                }
              }
            >
              <ul
                className="sc-gojNiO qHzYu"
              />
            </td>
          </tr>
          <tr
            className="sc-bwCtUz kLbHbK"
          >
            <th
              className="sc-iQKALj hLpCNL"
              style={
                Object {
                  "border": 0,
                  "fontWeight": "normal",
                }
              }
            >
              Adviser(s)
            </th>
            <td
              className="sc-iQKALj ldWFKA"
              style={
                Object {
                  "border": 0,
                }
              }
            >
              <ul
                className="sc-gojNiO qHzYu"
              />
            </td>
          </tr>
          <tr
            className="sc-bwCtUz kLbHbK"
          >
            <th
              className="sc-iQKALj hLpCNL"
              style={
                Object {
                  "border": 0,
                  "fontWeight": "normal",
                }
              }
            >
              Services
            </th>
            <td
              className="sc-iQKALj ldWFKA"
              style={
                Object {
                  "border": 0,
                }
              }
            >
              Account Management
            </td>
          </tr>
        </tbody>
      </table>
      <a
        className="sc-htpNat jdOrDl"
        href="https://example.com/companies/a4ead59f-dfc8-e511-a5e6-e4115bead28a/interactions/a066cc49-b679-4cbe-93c5-3ceba2f067ec"
        muted={false}
      >
        Go to the interaction detail page
      </a>
    </div>
  </details>
</div>
`;
